--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,76 @@
+/* -----------Tailwind----------- */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* -----------Variables----------- */
+:root{
+    --color: #9176FF;
+    --dark-color: #2b2b2b;
+    --dark-icon-color: #fff;
+    --light-color: #f7f7f7;
+    --light-icon-color: #FFDE59;
+}
+/* -----------Base----------- */
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+/* -----------Button----------- */
+.btn{
+    background-color: white;
+    width: 15em;
+    height: 8em;
+    border-radius: 10em;
+    padding: 0 0.5em;
+    box-shadow: inset 0 8px 60px rgba(0, 0, 0, .1),
+                inset 0 8px 8px rgba(0, 0, 0, .1),
+                inset 0 -4px 4px rgba(0, 0, 0, .1);
+    position: relative;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+.btn_indicator{
+    background-color: white;
+    width: 7em;
+    height: 7em;
+    border-radius: 50%;
+    position: absolute;
+    box-shadow: 0 8px 40px rgba(0, 0, 0, .2);
+    transition: transform .3s ease;
+}
+.btn_icon-container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.btn_icon{
+    color: var(--light-icon-color);
+    font-size: 3rem;
+}
+/* -----------Animation----------- */
+.btn_icon.animated{
+    animation: spin 0.5s;
+}
+@keyframes spin{
+    to{
+        transform: rotate(360deg);
+    }
+}
+/* -----------DarkMode----------- */
+.dark .btn{
+    box-shadow: inset 0 8px 60px rgba(0, 0, 0, .3),
+                inset 8px 0 8px rgba(0, 0, 0, .3),
+                inset 0 -4px 4px rgba(0, 0, 0, .3);
+}
+.dark .btn_indicator{
+    transform: translateX(100%);
+    background-color: var(--dark-color);
+    box-shadow: 0 8px 40px rgba(0, 0, 0, .3);
+}
+.dark .btn_icon{
+    color: var(--dark-icon-color);
+}
